force-app/main/default/objects/InsurancePolicy/fields/ApplicationDetails__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDetails__c</fullName>
    <label>ApplicationDetails</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>