force-app/main/default/objects/InsurancePolicy/fields/ApplicationDetailsJson__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDetailsJson__c</fullName>
    <label>ApplicationDetailsJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>