force-app/main/default/objects/InsurancePolicy/fields/BizRegistrationNoInsured__c.field-meta.xml
<CustomField>
    <fullName>BizRegistrationNoInsured__c</fullName>
    <label>Biz Registration No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>