force-app/main/default/objects/InsurancePolicy/fields/BrokerageAmtKRW__c.field-meta.xml
<CustomField>
    <fullName>BrokerageAmtKRW__c</fullName>
    <formula>IF ( ( TEXT(BizRegion__c) = &apos;LK_KR&apos; || TEXT(BizRegion__c) = &apos;LK_A&amp;G&apos; ) &amp;&amp; TEXT(Currency__c) = &apos;KRW&apos; , BrokerageAmt__c  *  1,
    IF ( TEXT(BizRegion__c) = &apos;LK_Re&apos; &amp;&amp; TEXT(Currency__c) = &apos;USD&apos; , BrokerageAmt__c  *  1,
        IF ( TEXT(BizRegion__c) = &apos;LK_VN&apos; &amp;&amp; TEXT(Currency__c) = &apos;VDN&apos; , BrokerageAmt__c  *  1,
           IF ( NOT(ISBLANK(ExchangeRatePolicy__c)), BrokerageAmt__c * ExchangeRatePolicy__c, BrokerageAmt__c  *  ExchangeRate__c )
           )
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Amt.(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>