force-app/main/default/objects/InsurancePolicy/fields/CallType__c.field-meta.xml
<CustomField>
    <fullName>CallType__c</fullName>
    <description>마린 관리 필드</description>
    <label>Call Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>