force-app/main/default/objects/InsurancePolicy/fields/CDIssueDate__c.field-meta.xml
<CustomField>
    <fullName>CDIssueDate__c</fullName>
    <description>회사통지일</description>
    <label>C/D Issue Date</label>
    <type>Date</type>
</CustomField>