force-app/main/default/objects/InsurancePolicy/fields/CheckBrkgRateValue_fm__c.field-meta.xml
<CustomField>
    <fullName>CheckBrkgRateValue_fm__c</fullName>
    <formula>IF ( ISBLANK(BrokerageRate__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckBrkgRateValue</label>
    <type>Checkbox</type>
</CustomField>