force-app/main/default/objects/InsurancePolicy/fields/CheckPostingDate_fm__c.field-meta.xml
<CustomField>
    <fullName>CheckPostingDate_fm__c</fullName>
    <formula>IF ( ISBLANK (  PostingDate__c ), false, true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CheckPostingDate</label>
    <type>Checkbox</type>
</CustomField>