force-app/main/default/objects/InsurancePolicy/fields/Clubsnoteno__c.field-meta.xml
<CustomField>
    <fullName>Clubsnoteno__c</fullName>
    <description>마린 관리 필드</description>
    <label>Club&apos;s note no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>