force-app/main/default/objects/InsurancePolicy/fields/CoInsuranceReinsurance__c.field-meta.xml
<CustomField>
    <fullName>CoInsuranceReinsurance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>공동인수 여부</description>
    <label>Co-Insurance/Reinsurance</label>
    <type>Checkbox</type>
</CustomField>