force-app/main/default/objects/InsurancePolicy/fields/Count_Of_Coverage_ChildItems__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Coverage_ChildItems__c</fullName>
    <description>It counts the number of coverage line items.</description>
    <label>Count Of Coverage ChildItems</label>
    <summaryForeignKey>InsurancePolicyCoverage.InsurancePolicyId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>