force-app/main/default/objects/InsurancePolicy/fields/CRSInceptionDatedt__c.field-meta.xml
<CustomField>
    <fullName>CRSInceptionDatedt__c</fullName>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>