force-app/main/default/objects/InsurancePolicy/fields/Currencyx__c.field-meta.xml
<CustomField>
    <fullName>Currencyx__c</fullName>
    <label>Currencyx</label>
    <length>10</length>
    <type>Text</type>
</CustomField>