force-app/main/default/objects/InsurancePolicy/fields/EffectiveDateEND__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDateEND__c</fullName>
    <description>배서/인식기준일</description>
    <label>Effective Date(END)</label>
    <type>Date</type>
</CustomField>