force-app/main/default/objects/InsurancePolicy/fields/EGIInsuranceAgeFemale__c.field-meta.xml
<CustomField>
    <fullName>EGIInsuranceAgeFemale__c</fullName>
    <label>Insurance Age(Female)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>