force-app/main/default/objects/InsurancePolicy/fields/EGIInsuranceAgeMale__c.field-meta.xml
<CustomField>
    <fullName>EGIInsuranceAgeMale__c</fullName>
    <label>Insurance Age(Male)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>