force-app/main/default/objects/InsurancePolicy/fields/EGIMasterPolicy_lk__c.field-meta.xml
<CustomField>
    <fullName>EGIMasterPolicy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Policy(EGI)</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>InsurancePoliciesbyEGI</relationshipName>
    <type>Lookup</type>
</CustomField>