force-app/main/default/objects/InsurancePolicy/fields/EGITotalHeadcount__c.field-meta.xml
<CustomField>
    <fullName>EGITotalHeadcount__c</fullName>
    <label>Total Headcount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>