force-app/main/default/objects/InsurancePolicy/fields/EndorseComments__c.field-meta.xml
<CustomField>
    <fullName>EndorseComments__c</fullName>
    <label>Endorse Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>