force-app/main/default/objects/InsurancePolicy/fields/ENDYN_fm__c.field-meta.xml
<CustomField>
    <fullName>ENDYN_fm__c</fullName>
    <formula>IF ( ENDNo__c = 0 &amp;&amp; ( TODAY() &gt; DATEVALUE(InceptionDate__c) ), TRUE,  
     IF ( ENDNo__c &gt;= 1 &amp;&amp; ( TODAY() &gt; EffectiveDateEND__c ), TRUE, FALSE
     )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ENDYN</label>
    <type>Checkbox</type>
</CustomField>