force-app/main/default/objects/InsurancePolicy/fields/ExchangeRatePolicy__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRatePolicy__c</fullName>
    <inlineHelpText>청약서/증권상의 환율</inlineHelpText>
    <label>Exchange Rate(Policy)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>