force-app/main/default/objects/InsurancePolicy/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>COM_Facility__c</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>InsurancePoliciesByFacility</relationshipName>
    <type>Lookup</type>
</CustomField>