force-app/main/default/objects/InsurancePolicy/fields/FileCategory__c.field-meta.xml
<CustomField>
    <fullName>FileCategory__c</fullName>
    <label>File Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>InsurancePolicy</fullName>
                <label>보험증권</label>
            </value>
            <value>
                <fullName>InsuranceApplication</fullName>
                <label>청약서</label>
            </value>
            <value>
                <fullName>InsuranceBinder</fullName>
                <label>결약서</label>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>