force-app/main/default/objects/InsurancePolicy/fields/GroupInsuranceType__c.field-meta.xml
<CustomField>
    <fullName>GroupInsuranceType__c</fullName>
    <label>Group Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>