force-app/main/default/objects/InsurancePolicy/fields/InceptionDate__c.field-meta.xml
<CustomField>
    <fullName>InceptionDate__c</fullName>
    <label>Inception Date</label>
    <type>DateTime</type>
</CustomField>