force-app/main/default/objects/InsurancePolicy/fields/IncomeClass__c.field-meta.xml
<CustomField>
    <fullName>IncomeClass__c</fullName>
    <description>계약형태</description>
    <label>Income Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New(Non-recurring)</fullName>
            </value>
            <value>
                <fullName>New(Recurring)</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>END</fullName>
            </value>
            <value>
                <fullName>Declaration</fullName>
                <isActive>false</isActive>
                <label>Declaration</label>
            </value>
            <value>
                <fullName>New(Bidding)</fullName>
                <isActive>false</isActive>
                <label>New(Bidding)</label>
            </value>
            <value>
                <fullName>New(Private)</fullName>
                <isActive>false</isActive>
                <label>New(Private)</label>
            </value>
            <value>
                <fullName>Renewal</fullName>
                <isActive>false</isActive>
                <label>Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>