force-app/main/default/objects/InsurancePolicy/fields/InsuranceMCType__c.field-meta.xml
<CustomField>
    <fullName>InsuranceMCType__c</fullName>
    <label>Insurance M/C Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>