force-app/main/default/objects/InsurancePolicy/fields/InsuredAcronym__c.field-meta.xml
<CustomField>
    <fullName>InsuredAcronym__c</fullName>
    <label>Insured Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>