force-app/main/default/objects/InsurancePolicy/fields/Insurer_Policy_No__c.field-meta.xml
<CustomField>
    <fullName>Insurer_Policy_No__c</fullName>
    <label>Insurer Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>