force-app/main/default/objects/InsurancePolicy/fields/IS_OCR_Lineitem_Complted__c.field-meta.xml
<CustomField>
    <fullName>IS_OCR_Lineitem_Complted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS OCR Lineitem Complted?</label>
    <type>Checkbox</type>
</CustomField>