force-app/main/default/objects/InsurancePolicy/fields/IsCopiedtoBizplan__c.field-meta.xml
<CustomField>
    <fullName>IsCopiedtoBizplan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>사업계획으로 복사됨?</description>
    <label>Is Copied to Bizplan</label>
    <type>Checkbox</type>
</CustomField>