force-app/main/default/objects/InsurancePolicy/fields/IsDocGen__c.field-meta.xml
<CustomField>
    <fullName>IsDocGen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>결약서 생성 여부 판단 boolean 필드</description>
    <label>IsDocGen</label>
    <type>Checkbox</type>
</CustomField>