force-app/main/default/objects/InsurancePolicy/fields/IsOCRComplated__c.field-meta.xml
<CustomField>
    <fullName>IsOCRComplated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>OCR 완료 여부</description>
    <label>Is OCR Completed?</label>
    <type>Checkbox</type>
</CustomField>