force-app/main/default/objects/InsurancePolicy/fields/IsOwner_fm__c.field-meta.xml
<CustomField>
    <fullName>IsOwner_fm__c</fullName>
    <formula>OwnerId =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOwner_fm</label>
    <type>Checkbox</type>
</CustomField>