force-app/main/default/objects/InsurancePolicy/fields/LKRefNoh__c.field-meta.xml
<CustomField>
    <fullName>LKRefNoh__c</fullName>
    <description>기회-&gt;계약 자동생성 시 지정되는 LK 계약번호</description>
    <label>LK Ref. No(h)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>