force-app/main/default/objects/InsurancePolicy/fields/LOB2__c.field-meta.xml
<CustomField>
    <fullName>LOB2__c</fullName>
    <label>LOB2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LOB1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>COM_LOB2</valueSetName>
    </valueSet>
</CustomField>