force-app/main/default/objects/InsurancePolicy/fields/LOBDetail__c.field-meta.xml
<CustomField>
    <fullName>LOBDetail__c</fullName>
    <label>LOB Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>