force-app/main/default/objects/InsurancePolicy/fields/Name_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Name_Contractor__c</fullName>
    <label>(?)Insured</label>
    <length>255</length>
    <type>Text</type>
</CustomField>