force-app/main/default/objects/InsurancePolicy/fields/OpenPolicy_is__c.field-meta.xml
<CustomField>
    <fullName>OpenPolicy_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open Policy</label>
    <type>Checkbox</type>
</CustomField>