force-app/main/default/objects/InsurancePolicy/fields/OriginalFXRateDate__c.field-meta.xml
<CustomField>
    <fullName>OriginalFXRateDate__c</fullName>
    <label>Original FX Rate Date</label>
    <type>Date</type>
</CustomField>