force-app/main/default/objects/InsurancePolicy/fields/Participant_Count__c.field-meta.xml
<CustomField>
    <fullName>Participant_Count__c</fullName>
    <description>Policy 하위 Insurance Participant 등록 레코드 수
-분납정보 등록 Action Visibility 제어 목적</description>
    <label>Participant Count</label>
    <summaryForeignKey>InsurancePolicyParticipant.InsurancePolicyId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>