force-app/main/default/objects/InsurancePolicy/fields/PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>PaymentMode__c</fullName>
    <description>납입구분(재)</description>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Installment</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>