force-app/main/default/objects/InsurancePolicy/fields/PerformanceFee__c.field-meta.xml
<CustomField>
    <fullName>PerformanceFee__c</fullName>
    <label>Performance Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>