force-app/main/default/objects/InsurancePolicy/fields/PolicyClosingDate__c.field-meta.xml
<CustomField>
    <fullName>PolicyClosingDate__c</fullName>
    <label>Policy Closing Date</label>
    <type>Date</type>
</CustomField>