force-app/main/default/objects/InsurancePolicy/fields/PolicyHodler_lk__c.field-meta.xml
<CustomField>
    <fullName>PolicyHodler_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>기회 : 계약자</description>
    <label>Policy Holder</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>