force-app/main/default/objects/InsurancePolicy/fields/PolicyLineItemCreated__c.field-meta.xml
<CustomField>
    <fullName>PolicyLineItemCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PolicyLineItemCreated</label>
    <type>Checkbox</type>
</CustomField>