force-app/main/default/objects/InsurancePolicy/fields/PolicyLineItemStatus__c.field-meta.xml
<CustomField>
    <fullName>PolicyLineItemStatus__c</fullName>
    <label>PolicyLineItemStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Posting</fullName>
            </value>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Reverse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>