force-app/main/default/objects/InsurancePolicy/fields/PostingDate__c.field-meta.xml
<CustomField>
    <fullName>PostingDate__c</fullName>
    <label>Posting Date</label>
    <type>Date</type>
</CustomField>