force-app/main/default/objects/InsurancePolicy/fields/PremCalcType__c.field-meta.xml
<CustomField>
    <fullName>PremCalcType__c</fullName>
    <label>PremCalcType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>