force-app/main/default/objects/InsurancePolicy/fields/PremiumKRW__c.field-meta.xml
<CustomField>
    <fullName>PremiumKRW__c</fullName>
    <formula>IF ( ( TEXT(BizRegion__c) = &apos;LK_KR&apos; || TEXT(BizRegion__c) = &apos;LK_A&amp;G&apos; ) &amp;&amp; TEXT(Currency__c) = &apos;KRW&apos; , Total_Premium_Amount__c  *  1,
    IF ( TEXT(BizRegion__c) = &apos;LK_Re&apos; &amp;&amp; TEXT(Currency__c) = &apos;USD&apos; , Total_Premium_Amount__c  *  1,
        IF ( TEXT(BizRegion__c) = &apos;LK_VN&apos; &amp;&amp; TEXT(Currency__c) = &apos;VDN&apos; , Total_Premium_Amount__c  *  1,
           IF ( NOT(ISBLANK(ExchangeRatePolicy__c)), Total_Premium_Amount__c * ExchangeRatePolicy__c, Total_Premium_Amount__c * ExchangeRate__c )
           )
        )
    )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Premium(Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>