force-app/main/default/objects/InsurancePolicy/fields/RefPlacement_lk__c.field-meta.xml
<CustomField>
    <fullName>RefPlacement_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ref. Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>