force-app/main/default/objects/InsurancePolicy/fields/RefType__c.field-meta.xml
<CustomField>
    <fullName>RefType__c</fullName>
    <description>계약유형</description>
    <label>Ref. Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>원수</fullName>
            </value>
            <value>
                <fullName>임의</fullName>
            </value>
            <value>
                <fullName>특약</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>