force-app/main/default/objects/InsurancePolicy/fields/RenewalBrokerageAmt__c.field-meta.xml
<CustomField>
    <fullName>RenewalBrokerageAmt__c</fullName>
    <label>Renewal Brokerage Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>