force-app/main/default/objects/InsurancePolicy/fields/RenewalOpportunity_lk__c.field-meta.xml
<CustomField>
    <fullName>RenewalOpportunity_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Insurance Policies</relationshipLabel>
    <relationshipName>Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>