force-app/main/default/objects/InsurancePolicy/fields/RenewalOpptyCreate__c.field-meta.xml
<CustomField>
    <fullName>RenewalOpptyCreate__c</fullName>
    <label>Renewal Oppty Create</label>
    <type>Date</type>
</CustomField>