force-app/main/default/objects/InsurancePolicy/fields/RenewalPremium__c.field-meta.xml
<CustomField>
    <fullName>RenewalPremium__c</fullName>
    <label>Renewal Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>