force-app/main/default/objects/InsurancePolicy/fields/RetailBrokingParticipation__c.field-meta.xml
<CustomField>
    <fullName>RetailBrokingParticipation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retail Broking Participation</label>
    <type>Checkbox</type>
</CustomField>