force-app/main/default/objects/InsurancePolicy/fields/SlipInfoJson__c.field-meta.xml
<CustomField>
    <fullName>SlipInfoJson__c</fullName>
    <label>SlipInfoJson</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>