force-app/main/default/objects/InsurancePolicy/fields/Term_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Term_Premium_Amount__c</fullName>
    <label>Term Premium Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>