force-app/main/default/objects/InsurancePolicy/fields/Total_Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium_Amount__c</fullName>
    <label>Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>