force-app/main/default/objects/InsurancePolicy/fields/Total_Sum_Insured_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sum_Insured_Amount__c</fullName>
    <label>Total Sum Insured Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>