force-app/main/default/objects/InsurancePolicy/fields/TotalInstalment__c.field-meta.xml
<CustomField>
    <fullName>TotalInstalment__c</fullName>
    <description>총 분납횟수</description>
    <label>Total Instalment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>