force-app/main/default/objects/InsurancePolicy/listViews/All_InsurancePolicies.listView-meta.xml
<ListView>
    <fullName>All_InsurancePolicies</fullName>
    <columns>Name</columns>
    <columns>NameInsured</columns>
    <columns>ExpirationDate</columns>
    <columns>PremiumAmount</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>CreatedBy</columns>
    <columns>LKRefNo_fm__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Insurance Policies</label>
</ListView>