force-app/main/default/objects/InsurancePolicy/listViews/Group_Insurance_Policies_Master_Only.listView-meta.xml
<ListView>
    <fullName>Group_Insurance_Policies_Master_Only</fullName>
    <columns>Name</columns>
    <columns>NameInsured</columns>
    <columns>ExpirationDate</columns>
    <columns>PremiumAmount</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EGIGroupInsurance_is__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>InsuranceMCType__c</field>
        <operation>equals</operation>
        <value>Master</value>
    </filters>
    <label>Group Insurance Policies-Master Only</label>
</ListView>